--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="src/main.js"></script>
     <title>DCC202 - Atividade 10: Breno Junqueira</title>
 </head>
 <body>
